--- a/templates/quote.html
+++ b/templates/quote.html
@@ -67,6 +67,11 @@ Quote
                 });
                 if (matched.length > 0) {
                     displayNames();
+                } else {
+                    while (listNames.firstChild) {
+                        listNames.removeChild(listNames.firstChild);
+                    }
+
                 }
             }
 
