--- a/templates/quote.html
+++ b/templates/quote.html
@@ -94,6 +94,7 @@ Quote
                 if (quoteResponse.flag === "error") {
                     // failed to fetch quote
                 } else if (quoteResponse.flag === "success") {
+                    // successfully fetched quote
                     displayQuote(quoteResponse);
                 }
                 }
