--- a/templates/history.html
+++ b/templates/history.html
@@ -8,10 +8,10 @@ History
 <div class="flex flex-col w-full gap-10">
     <p class="text-center text-xl font-bold p-2">Transaction History</p>
     <div class="w-full flex justify-center items-center">
-        <table class="w-5/6 table">
+        <table class="w-5/6">
             <thead class="border-b border-b-slate-600">
                 <tr>
-                    <th class="text-end">Time</th>
+                    <th class="text-start">Time</th>
                     <th class="text-start">Company</th>
                     <th class="text-start">Ticker Symbol</th>
                     <th class="text-end">Share Price</th>
@@ -21,11 +21,11 @@ History
             </thead>
             <tbody id="displayHistory">
             </tbody>
+            <tfoot></tfoot>
         </table>
     </div>
     <script>
         let showHistory = document.querySelector("#displayHistory");
-        let displaySharesTotal = document.querySelector("#displaySharesTotal");
         let createElement = (element) => document.createElement(element);
 
         async function getHistory () {
@@ -46,10 +46,10 @@ History
                 let shares = createElement("td");
                 let total = createElement("td");
 
-                price.classList.add("text-end", "border-r-10");
-                shares.classList.add("text-end", "border-r-10");
-                total.classList.add("text-end", "border-r-10");
-                timestamp.classList.add("text-end", "border-r-10");
+                price.classList.add("text-end");
+                shares.classList.add("text-center");
+                total.classList.add("text-end");
+                timestamp.classList.add("text-start");
 
                 timestamp.textContent = history[i].timestamp;
                 name.textContent = history[i].name;
