--- a/templates/history.html
+++ b/templates/history.html
@@ -5,7 +5,7 @@ History
 {% endblock %}
 
 {% block main %}
-<div class="flex flex-col w-full gap-10">
+<div class="flex flex-col w-full gap-10 text-slate-800">
     <p class="text-center text-xl font-bold p-2">Transaction History</p>
     <div class="w-full flex justify-center items-center">
         <table class="w-5/6">
