homepage change text color

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,8 +5,8 @@ Home
 {% endblock %}
 
 {% block main %}
-<div class="p-10 flex flex-col w-full gap-10">
-    <div class="flex justify-around items-center text-black">
+<div class="p-10 flex flex-col w-full gap-10 text-slate-800">
+    <div class="flex justify-around items-center">
         <div>
             <p class="underline text-xl">Cash Total</p>
             <p class="text-lg sm:text-xl font-bold text-right" id="displayCash"></p>
