--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="min-h-screen relative bg-white">
+<body class="min-h-screen relative bg-white text-slate-800">
     <nav class="bg-black p-2">
         {% if session["user_id"] %}
         <div class="flex justify-around items-center w-full">
