--- a/templates/history.html
+++ b/templates/history.html
@@ -5,7 +5,11 @@ History
 {% endblock %}
 
 {% block main %}
-<div class="flex flex-col w-full gap-10 text-slate-800">
+<div class="flex flex-col w-full gap-10 text-slate-800 relative">
+    <div class="absolute left-10 top-4">
+        <a href="/"><img src="../assets/icons/back.svg" alt="back" onmouseover="addText('add')" onmouseout="addText('remove')"></a>
+        <p id="homeButton" class="bg-black bg-opacity-80 text-white rounded-md p-0.5 mt-0.5">Home</p>
+    </div>
     <p class="text-center text-xl font-bold p-2">Transaction History</p>
     <div class="w-full flex justify-center items-center">
         <table class="w-5/6">
@@ -26,7 +30,16 @@ History
     </div>
     <script>
         let showHistory = document.querySelector("#displayHistory");
+        let homeButton = document.querySelector("#homeButton");
         let createElement = (element) => document.createElement(element);
+
+        function addText (text) {
+            if (text === "add") {
+                homeButton.classList.remove("hidden");
+            } else {
+                homeButton.classList.add("hidden");
+            }
+        };
 
         async function getHistory () {
             let url = `/api/user/history`;
