--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -41,6 +41,12 @@ Home
             </tfoot>
         </table>
     </div>
+    <div>
+        <span class="loading loading-ring loading-sm"></span>
+        <span class="loading loading-ring loading-lg"></span>
+        <span class="loading loading-ring loading-xs"></span>
+        <p>Loading</p>
+    </div>
     <script>
         let displayCash = document.querySelector("#displayCash");
         let displayStocksTotal = document.querySelector("#displayStocksTotal");
