--- a/templates/sell.html
+++ b/templates/sell.html
@@ -5,26 +5,191 @@ Sell
 {% endblock %}
 
 {% block main %}
-<div class="w-full flex flex-col items-center gap-10 p-2 absolute">
+<div class="w-full flex flex-col items-center gap-10 p-2">
+    <div id="displaySellResponse" class="bg-slate-400 bg-opacity-50 w-full h-screen absolute top-0 left-0 z-10 flex items-center hidden justify-center"></div>
     <p class="text-center font-bold text-xl">Sell Shares</p>
-    <a href="/" class="absolute left-10 top-10"><img src="../assets/icons/back.svg" alt="back"></a>
-    <form action="/sell" method="post" class="flex flex-col justify-center items-center gap-10 w-2/3">
-        <div class="w-full">
-            <label for="company_name" class="block text-slate-500 mb-2">Company</label>
-            <input type="text" name="company_name" id="company_name" placeholder="Input company name"
-                class="p-2 w-full outline-none border border-purple-600 bg-slate-300 rounded-lg focus:border-purple-800 focus:border-2 focus:bg-slate-400 placeholder:text-white"
-                required autocomplete="off">
-        </div>
-        <div class="w-full">
-            <label for="shares" class="block text-slate-500 mb-2">No. of shares</label>
-            <input type="number" name="shares" id="shares" placeholder="Input number of shares"
-                class="p-2 w-full outline-none border border-purple-600 bg-slate-300 rounded-lg focus:border-purple-800 focus:border-2 focus:bg-slate-400 placeholder:text-white"
-                required>
-        </div>
-        <div>
-            <button type="submit"
-                class="bg-purple-800 text-white font-bold text-xl p-2 px-16 rounded-xl sm:text-2xl sm:p-3 sm:px-24">Sell</button>
-        </div>
-    </form>
+    <div class=" relative w-full flex flex-col items-center gap-10 p-2">
+        <a href="/" class="absolute left-10"><img src="../assets/icons/back.svg" alt="back"></a>
+        <form id="sellForm" class="flex flex-col justify-center items-center gap-10 w-2/3 sm:w-3/5">
+            <div class="w-full relative">
+                <label for="company_name" class="block text-slate-500 mb-2">Company</label>
+                <input type="text" name="company_name" id="company_name" placeholder="Input company name"
+                    class="p-2 w-full outline-none border border-purple-600 bg-slate-300 rounded-lg focus:border-purple-800 focus:border-2 focus:bg-slate-400 placeholder:text-white"
+                    required autocomplete="off">
+                <div id="displayNames"
+                    class="bg-slate-200 px-2 overflow-auto flex flex-col items-start rounded-b-lg shadow-sm shadow-slate-800">
+                </div>
+            </div>
+            <div class="w-full">
+                <label for="shares" class="block text-slate-500 mb-2">No. of shares</label>
+                <input type="number" name="shares" id="shares" placeholder="Input number of shares"
+                    class="p-2 w-full outline-none border border-purple-600 bg-slate-300 rounded-lg focus:border-purple-800 focus:border-2 focus:bg-slate-400 placeholder:text-white"
+                    required min="1" autocomplete="off">
+            </div>
+            <div>
+                <button id="submitButton" type="button"
+                    class="bg-purple-800 font-bold text-xl text-white p-2 px-16 rounded-xl sm:text-2xl sm:p-3 sm:px-24">Sell</button>
+            </div>
+        </form>
+        <script>
+            let company_name = document.querySelector("#company_name");
+            let shares = document.querySelector("#shares");
+            let listNames = document.querySelector("#displayNames");
+            let submitButton = document.querySelector("#submitButton");
+            let sellForm = document.querySelector("#sellForm");
+            let showSellResponse = document.querySelector("#displaySellResponse");
+            const createElement = (element) => document.createElement(element);
+            let companyNames;
+
+            async function getNames() {
+                let url = "/api/user/company_names";
+                response = await fetch(url);
+                companyNames = await response.json();
+            }
+            getNames(); 
+
+            function displayNames() {
+                while (listNames.firstChild) {
+                    listNames.removeChild(listNames.firstChild);
+                }
+                let length = matched.length > 5 ? 5 : matched.length;
+                for (let i = 0; i < length; i++) {
+                    let name = createElement("button");
+                    name.classList.add("w-full", "text-left", "text-slate-500", "hover:bg-slate-400", "hover:text-white", "p-2", "rounded-lg", "focus:outline-none");
+                    name.textContent = matched[i];
+                    name.addEventListener('click', () => {
+                        company_name.value = matched[i];
+                        while (listNames.firstChild) {
+                            listNames.removeChild(listNames.firstChild);
+                        }
+                    });
+                    listNames.appendChild(name);
+                }
+            }
+
+            function checkNames() {
+                matched = [];
+                let userName = company_name.value;
+                if (userName.length < 1) {
+                    return;
+                }
+                let matchName = new RegExp(userName, "i");
+                companyNames.forEach(name => {
+                    if (matchName.test(name)) {
+                        matched.push(name);
+                    }
+                });
+                if (matched.length > 0) {
+                    displayNames();
+                } else {
+                    while (listNames.firstChild) {
+                        listNames.removeChild(listNames.firstChild);
+                    }
+
+                }
+            }
+
+            company_name.addEventListener('keyup', (event) => {
+                if (event.key === "Backspace" || event.key === "Delete") {
+                    while (listNames.firstChild) {
+                        listNames.removeChild(listNames.firstChild);
+                    }
+                }
+                if (companyNames) {
+                    checkNames();
+                }
+            });
+
+            async function getSellResponse() {
+                let url = `/api/Sell?company_name=${company_name.value}&shares=${shares.value}`;
+                response = await fetch(url);
+                let sellResponse = await response.json();
+
+                if (sellResponse.flag === "error") {
+                    // failed to fetch Sell
+                } else if (sellResponse.flag === "success") {
+                    // successfully fetched Sell
+                    displaySell(sellResponse);
+                }
+                }
+
+            function displaySell(sellResponse) {
+                let SellDiv = createElement("div");
+                let fullMessage = createElement("div");
+                let doneImage = createElement("img");
+                let message = createElement("p");
+                let moreMessage = createElement("p");
+                let companyName = createElement("p");
+                let price = createElement("p");
+                let dismissButton = createElement("button");
+
+                companyName.classList.add("font-bold", "text-purple-400", "block");
+                price.classList.add("font-bold", "text-purple-400", "inline");
+                message.classList.add("inline");
+                moreMessage.classList.add("inline");
+                SellDiv.classList.add("p-10","rounded-lg", "flex", "flex-col", "items-center", "gap-10", "shadow-sm", "shadow-slate-800", "h-1/2", "w-2/3", "bg-white");
+                dismissButton.classList.add("bg-purple-800", "font-bold", "text-xl", "text-white", "p-2", "px-16", "rounded-xl", "sm:text-2xl", "sm:p-3", "sm:px-24");
+                sellForm.classList.add("hidden");
+
+                companyName.textContent = sellResponse.name;
+                price.textContent = `$${sellResponse.price}`;
+                message.textContent = "You have successfully sold ";
+                moreMessage.textContent = ' shares of ';
+                doneImage.setAttribute("src", "../assets/icons/done.svg");
+                dismissButton.textContent = "Ok";
+
+                dismissButton.addEventListener('click', () => {
+                    showSellResponse.classList.add("hidden");
+                    sellForm.classList.remove("hidden");
+                    showSellResponse.removeChild(showSellResponse.firstChild);
+                    company_name.value = "";
+                });
+                while (showSellResponse.firstChild) {
+                    showSellResponse.removeChild(showSellResponse.firstChild);
+                }
+
+                fullMessage.appendChild(message);
+                fullMessage.appendChild(companyName);
+                fullMessage.appendChild(moreMessage);
+                fullMessage.appendChild(price);
+                SellDiv.appendChild(doneImage);
+                SellDiv.appendChild(fullMessage);
+                SellDiv.appendChild(dismissButton);
+                showSellResponse.appendChild(SellDiv);
+            }
+
+            submitButton.addEventListener('click', () => {
+                let validName = false;
+                companyNames.forEach(name => {
+                    if (name === company_name.value) {
+                        validName = true;
+                        return;
+                    }
+                })
+                if (validName) {
+                    loading();
+                    getSellResponse();
+                } else {
+                    while (listNames.firstChild) {
+                        listNames.removeChild(listNames.firstChild);
+                    }
+                    let errorMessage = createElement("p");
+                    errorMessage.textContent = "Please enter a valid company name";
+                    errorMessage.classList.add("text-red-500");
+                    listNames.appendChild(errorMessage);
+                }
+
+
+            });
+
+            function loading () {
+                // load while waiting for response
+                let loadingSign = createElement("span");
+                loadingSign.classList.add("loading", "loading-ring", "loading-lg");
+                showSellResponse.classList.remove("hidden");
+                showSellResponse.appendChild(loadingSign);
+            }
+        </script>
+    </div>
 </div>
 {% endblock %}
